--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.7",
+    "@ffmpeg/util": "^0.12.1",
     "axios": "^1.6.2",
+    "formidable": "^3.5.4",
     "next": "14.0.3",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.8.69",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
