--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.7",
     "@ffmpeg/util": "^0.12.1",
+    "@paddle/paddle-js": "^1.4.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.6.2",
     "formidable": "^3.5.4",
     "next": "14.0.3",
+    "paddle-billing": "^3.1.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.8.69",
     "react": "^18",
