--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ffmpeg/ffmpeg": "^0.12.7",
     "@ffmpeg/util": "^0.12.1",
     "@paddle/paddle-js": "^1.4.1",
+    "@paddle/paddle-node-sdk": "^2.8.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -19,7 +20,6 @@
     "axios": "^1.6.2",
     "formidable": "^3.5.4",
     "next": "14.0.3",
-    "paddle-billing": "^3.1.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.8.69",
     "react": "^18",
